public-testnet/parachains/karura/parachain.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: hydra-ui-test
  name: karura-parachain-coll-01-deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: karura-parachain-coll-01
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: karura-parachain-coll-01
    spec:
      containers:
      - image: 601305236792.dkr.ecr.eu-west-1.amazonaws.com/karura-test:1.6.0-1c177692
        resources:
          limits:
            memory: "5000Mi"
            cpu: "3000m"
          requests:
            memory: "4000Mi"
            cpu: "3000m"
        imagePullPolicy: Always
        name: karura-parachain-coll-01
        volumeMounts:
          - mountPath: /tmp
            name: persistent-storage
          - mountPath: /mnt/karura1
            name: karura1-storage  
        args: ["--chain", "/tmp/karura-raw.json", "--parachain-id", "2000", "--collator", "--base-path", "/mnt/karura1", "--node-key", "000000000000000000000000000000000000000000000000000000000000000c", "--keystore-path", "/tmp/karura/keystore-c1", "--bootnodes", "/dns/karura-coll-01-svc.hydra-ui-test.svc.cluster.local/tcp/30333/p2p/12D3KooWB48q6TvbNtRPA5JfaaTuxjvMV2kwooYyz7frVUJ6yHTK", "--public-addr", "/dns/karura-coll-01-svc.hydra-ui-test.svc.cluster.local/tcp/30333", "--", "--chain", "/tmp/w [...]
        ports:
        - containerPort: 9944
        - containerPort: 9933
        - containerPort: 30333
      volumes:
        - name: persistent-storage
          persistentVolumeClaim:
            claimName: efs-pv
        - name: karura1-storage
          persistentVolumeClaim:
            claimName: efs-karura1-storage    
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: hydra-ui-test
  name: karura-parachain-coll-02-deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: karura-parachain-coll-02
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: karura-parachain-coll-02
    spec:
      containers:
      - image: 601305236792.dkr.ecr.eu-west-1.amazonaws.com/karura-test:1.6.0-1c177692
        resources:
          limits:
            memory: "5000Mi"
            cpu: "3000m"
          requests:
            memory: "4000Mi"
            cpu: "3000m"
        imagePullPolicy: Always
        name: karura-parachain-coll-02
        volumeMounts:
          - mountPath: /tmp
            name: persistent-storage
          - mountPath: /mnt/karura2
            name: karura2-storage  
        args: ["--chain", "/tmp/karura-raw.json", "--parachain-id", "2000", "--collator", "--base-path", "/mnt/karura2", "--node-key", "000000000000000000000000000000000000000000000000000000000000000d", "--keystore-path", "/tmp/karura/keystore-c2", "--bootnodes", "/dns/karura-coll-01-svc.hydra-ui-test.svc.cluster.local/tcp/30333/p2p/12D3KooWB48q6TvbNtRPA5JfaaTuxjvMV2kwooYyz7frVUJ6yHTK", "--public-addr", "/dns/karura-coll-01-svc.hydra-ui-test.svc.cluster.local/tcp/30333", "--", "--chain", "/tmp/w [...]
        ports:
        - containerPort: 9944
        - containerPort: 9933
        - containerPort: 30333
      volumes:
        - name: persistent-storage
          persistentVolumeClaim:
            claimName: efs-pv
        - name: karura2-storage
          persistentVolumeClaim:
            claimName: efs-karura2-storage      
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: hydra-ui-test
  name: karura-parachain-coll-03-deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: karura-parachain-coll-03
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: karura-parachain-coll-03
    spec:
      containers:
      - image: 601305236792.dkr.ecr.eu-west-1.amazonaws.com/karura-test:1.6.0-1c177692
        resources:
          limits:
            memory: "5000Mi"
            cpu: "3000m"
          requests:
            memory: "4000Mi"
            cpu: "3000m"
        imagePullPolicy: Always
        name: karura-parachain-coll-03
        volumeMounts:
          - mountPath: /tmp
            name: persistent-storage
          - mountPath: /mnt/karura3
            name: karura3-storage  
        args: ["--chain", "/tmp/karura-raw.json", "--parachain-id", "2000", "--collator", "--base-path", "/karura/", "--node-key", "000000000000000000000000000000000000000000000000000000000000000e", "--keystore-path", "/tmp/karura/keystore-c3", "--bootnodes", "/dns/karura-coll-01-svc.hydra-ui-test.svc.cluster.local/tcp/30333/p2p/12D3KooWB48q6TvbNtRPA5JfaaTuxjvMV2kwooYyz7frVUJ6yHTK", "--public-addr", "/dns/karura-coll-01-svc.hydra-ui-test.svc.cluster.local/tcp/30333", "--", "--chain", "/tmp/weste [...]
        ports:
        - containerPort: 9944
        - containerPort: 9933
        - containerPort: 30333
      volumes:
        - name: persistent-storage
          persistentVolumeClaim:
            claimName: efs-pv
        - name: karura3-storage
          persistentVolumeClaim:
            claimName: efs-karura3-storage    
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: hydra-ui-test
  name: karura-public-rpc-deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: karura-public-rpc
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: karura-public-rpc
    spec:
      containers:
      - image: 601305236792.dkr.ecr.eu-west-1.amazonaws.com/karura-test:1.6.0-1c177692
        resources:
          limits:
            memory: "5000Mi"
            cpu: "3000m"
          requests:
            memory: "4000Mi"
            cpu: "3000m"
        imagePullPolicy: Always
        name: public-rpc
        volumeMounts:
          - mountPath: /tmp
            name: persistent-storage
        args: ["--chain", "/tmp/karura-raw.json", "--parachain-id", "2000", "--base-path", "/karura/", "--bootnodes", "/dns/karura-coll-01-svc.hydra-ui-test.svc.cluster.local/tcp/30333/p2p/12D3KooWB48q6TvbNtRPA5JfaaTuxjvMV2kwooYyz7frVUJ6yHTK", "--public-addr", "/dns/karura-coll-01-svc.hydra-ui-test.svc.cluster.local/tcp/30333", "--ws-external", "--unsafe-ws-external", "--rpc-methods", "Unsafe", "--rpc-cors", "all", "--", "--chain", "/tmp/westend-raw.json", "--base-path", "/karura/"]
        ports:
        - containerPort: 9944
      volumes:
        - name: persistent-storage
          persistentVolumeClaim:
            claimName: efs-pv      
---
apiVersion: v1
kind: Service
metadata:
  namespace: hydra-ui-test
  name: karura-coll-01-svc
spec:
  ports:
    - port: 9944
      name: websocket
      targetPort: 9944
      protocol: TCP
    - port: 30333
      name: custom-port
      targetPort: 30333
      protocol: TCP
    - port: 9933
      name: rpc-port
      targetPort: 9933  
  type: NodePort
  selector:
    app.kubernetes.io/name: karura-parachain-coll-01
---
apiVersion: v1
kind: Service
metadata:
  namespace: hydra-ui-test
  name: karura-coll-02-svc
spec:
  ports:
    - port: 9944
      name: websocket
      targetPort: 9944
      protocol: TCP
    - port: 30333
      name: custom-port
      targetPort: 30333
      protocol: TCP
    - port: 9933
      name: rpc-port
      targetPort: 9933
      protocol: TCP   
  type: NodePort
  selector:
    app.kubernetes.io/name: karura-parachain-coll-02
---
apiVersion: v1
kind: Service
metadata:
  namespace: hydra-ui-test
  name: karura-coll-03-svc
spec:
  ports:
    - port: 9944
      name: websocket
      targetPort: 9944
      protocol: TCP
    - port: 30333
      name: custom-port
      targetPort: 30333
      protocol: TCP  
    - port: 9933
      name: rpc-port
      targetPort: 9933
  type: NodePort
  selector:
    app.kubernetes.io/name: karura-parachain-coll-03
---
apiVersion: v1
kind: Service
metadata:
  namespace: hydra-ui-test
  name: karura-public-rpc-svc
spec:
  ports:
    - port: 80
      name: websocket
      targetPort: 9944
      protocol: TCP
  type: NodePort    
  selector:
    app.kubernetes.io/name: karura-public-rpc
